<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/txtdelete" />


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="435dp">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btncancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickCancel"
            android:text="@string/txtcancel" />

        <Button
            android:id="@+id/btnrefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickRefresh"
            android:text="@string/txtrefresh" />
    </LinearLayout>

</LinearLayout>
